app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: snowflake-id-generator
spec:
  containers:
  - image: snowflake-id-generator:latest
    imagePullPolicy: IfNotPresent
    name: snowflake-id-generator
    livenessProbe:
      httpGet:
        path: /management/health/livenessState
        port: 8080
      initialDelaySeconds: 15
      timeoutSeconds: 2
      periodSeconds: 20
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /management/health/readinessState
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 5
      failureThreshold: 3
      successThreshold: 1
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
